<resources>
    <string name="app_name">Track My Grade</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile_hint">Mobile*</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_sent_to_your_mobile_number">Enter OTP sent to your mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="enter_received_otp">Enter Received OTP</string>
    <string name="otp_hint">OTP*</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="resend_otp">Resent OTP</string>
    <string name="track">Track</string>
    <string name="my_grade">My Grade</string>
</resources>